# ak-nix

./: .gitignore  README.md  check.sh  default.nix  flake.nix  shell.nix
.github/workflows/: all-tests.yml
lib/: attrsets.nix  call-flake-w.nix  debug.nix  default.nix  encode.nix  fetchurl.nix  filesystem.nix  filt.nix  flake-registry.nix  flake-utils.nix  flake.nix  funk.nix  json-utils.nix  json.nix  lists.nix  overlay.lib.nix  paths.nix  repl.nix  safe-reads.nix  semver.nix  stdenv.nix  strings.nix  tags.nix  thunk.nix  trivial.nix  types.nix  yants.nix
lib/tests/: debug.nix  default.nix  paths.nix  strings.nix
pkgs/: default.nix  flake.nix
pkgs/build-support/: default.nix  tsconfig.nix
pkgs/development/: default.nix  flake.nix
pkgs/docgen/: default.nix  module-options.nix
plugs/hello/: default.nix  hello.cc
profiles/development/: default.nix  shall.nix
ref/: ak-core-wonky.nix
templates/autotools/: .gitignore  bootstrap  configure.ac  default.nix  flake.nix
templates/basic/: flake.nix
templates/basic-pkg/: flake.nix
templates/basic-with-lib/: flake.nix
templates/lib-sub/: sub.nix
templates/meaty/: flake.nix
templates/nix-bin/: main.cc  pkg-fun.nix
templates/nix-plugin/: pkg-fun.nix  plugin.cc
templates/nix-text/: tests.nix
templates/tests/: README.org  bootstrap.sh  check.nix  check.sh  (+3 more)
templates/tests-sub/: default.nix
tests/: TEMPLATE.nix.in  attrsets.nix  debug.nix  default.nix  encode.nix  gen.sh  libjson.nix  liblist.nix  libsemver.nix  libtag.nix  paths.nix  strings.nix  tar.nix  trivial.nix
types/: fs.nix  overlay.yt.nix
(+28 files in other folders)
